--- a/src/app/transactions/certification/certification.component.html
+++ b/src/app/transactions/certification/certification.component.html
@@ -9,7 +9,8 @@
                 </button>
                 <button mat-raised-button class="demo-button" [matMenuTriggerFor]="cf"><mat-icon>add</mat-icon>Nouveau</button>
                 <mat-menu #cf="matMenu">
-                    <button mat-menu-item routerLink="/certificatf" routerLinkActive="list-item-active">Création Certificat Foncier</button>
+<!--                    <button mat-menu-item routerLink="/certificatf" routerLinkActive="list-item-active">Création Certificat Foncier</button>-->
+                  <button mat-menu-item (click)="openDialog()">Création Certificat Foncier</button>
                     <button mat-menu-item routerLink="/certificatisolee" routerLinkActive="list-item-active">Création Certificat Foncier Demande Isolée</button>
                     <button mat-menu-item routerLink="/fusioncf" routerLinkActive="list-item-active">Fusion Certificat Foncier</button>
                     <button mat-menu-item routerLink="/morcellementcf" routerLinkActive="list-item-active">Morcellement Certificat Foncier Demande Isolée</button>
@@ -18,41 +19,41 @@
 
             <div class="mat-elevation-z0">
                 <table mat-table [dataSource]="dataSource">
-              
+
                   <!-- Position Column -->
                   <ng-container matColumnDef="position">
                     <th mat-header-cell *matHeaderCellDef> No. </th>
                     <td mat-cell *matCellDef="let element"> {{element.position}} </td>
                   </ng-container>
-              
+
                   <!-- Name Column -->
                   <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef> Name </th>
                     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                   </ng-container>
-              
+
                   <!-- Weight Column -->
                   <ng-container matColumnDef="weight">
                     <th mat-header-cell *matHeaderCellDef> Weight </th>
                     <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
                   </ng-container>
-              
+
                   <!-- Symbol Column -->
                   <ng-container matColumnDef="symbol">
                     <th mat-header-cell *matHeaderCellDef> Symbol </th>
                     <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
                   </ng-container>
-              
+
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
-              
+
                 <mat-paginator [pageSizeOptions]="[5, 10, 20]"
                                showFirstLastButtons
                                aria-label="Select page of periodic elements">
                 </mat-paginator>
               </div>
-              
+
         </div>
     </div>
 </div>
