tableau de bord

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,34 @@
     <div class="page__box p-3 mt-2">TABLEAU DE BORD</div>
     <div class="page__content shadow p-3 position-relative">
         <div class="page__content-data position-absolute">
-            Mon tableau de bord
+          
+              <main>
+                <div class="analyses">
+                    <div class="sales">
+                        <div class="status">
+                            <div class="info">
+                                <h3>Total certificats Fonciers</h3>
+                                <h1>18564</h1>
+                            </div>
+                            <div class="progress">
+                                <svg>
+                                    <circle cx="38" cy="38" r="36"></circle>
+                                </svg>
+                                <div class="percentage">
+                                    <p>+12 %</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </main>     
+
+
+
+
+
+
+
         </div>
     </div>
 </div>
