--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -4,8 +4,8 @@
     </div>
     <mat-divider></mat-divider>
     <h2 class="mt-2">SIFCI</h2>
-    <a mat-list-item routerLink="/home" routerLinkActive="list-item-active" class="list">
-    <mat-icon>home</mat-icon> TABLEAU DE BORD
+    <a mat-list-item routerLink="/dashboard" routerLinkActive="list-item-active" class="list">
+    <mat-icon>dashboard</mat-icon> TABLEAU DE BORD
     </a>
     <a mat-list-item routerLink="/recherche" routerLinkActive="list-item-active"><mat-icon>search</mat-icon>Recherche</a>
     
