--- a/src/app/tb-dtv/tb-dtv.component.html
+++ b/src/app/tb-dtv/tb-dtv.component.html
@@ -18,9 +18,9 @@
             <main class="main-container">
               <div class="main-title">
                 <select name="tb" id="typeTB">
-                  <option value="tb1" routerLink="/dashboard">Board principal</option>
-                  <option value="tb2" routerLink="/tb-cf">Board CF</option>
-                  <option value="tb3" routerLink="/tb-dtv">Board DTV</option>
+                  <option value="tb1" class="">Complet</option>
+                  <option value="tb2" class="">CF</option>
+                  <option value="tb3" class="">DTV</option>
                 </select>
                 </div>
         
@@ -93,3 +93,4 @@
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js" 
 integrity="sha512-7U4rRB8aGAHGVad3u2jiC7GA5/1YhQcQjxKeaVms/bT66i3LVBMRcBI9KwABNWnxOSwulkuSXxZLGuyfvo7V1A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
