--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -217,6 +217,8 @@
   
   .charts-card {
     background-color: #ffffff;
+    width: 100%;
+    height: 100%;
     margin-bottom: 20px;
     padding: 25px;
     box-sizing: border-box;
@@ -234,6 +236,23 @@
     font-weight: 400;
   }
   
+  .chart-container{
+    display: inline-block;
+    position: relative;
+    width: 480px;
+    height: 300px;
+  }
+  
+  .chart-size{
+    display: flex;
+    position: relative;
+    width: 450px;
+    justify-content: center;
+    object-fit: cover !important;
+
+  }
+
+ 
   
   /* ---------- SCROLLBARS ---------- */
   
@@ -284,7 +303,7 @@
   }
   
   /* Small <= 768px */
-  @media screen and (max-width: 768px) {
+ /* @media screen and (max-width: 768px) {
     .main-cards {
       grid-template-columns: 1fr;
       gap: 10px;
@@ -298,9 +317,28 @@
   }
   
   /* Extra Small <= 576px */
-  @media screen and (max-width: 576px) {
+ /* @media screen and (max-width: 576px) {
     .header-left {
       display: none;
+    }
+  }*/
+
+  @media screen and (max-width: 768px) {
+    .main-cards, .charts {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  
+    .card, .charts-card {
+      width: 45%;
+      margin: 10px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .card, .charts-card {
+      width: 100%;
     }
   }
 
