--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,7 +12,7 @@
         min-height: calc(100vh - 130px);
         border-radius: 10px 10px 0 0;
         margin-top: -4rem;
-        background: white;
+        background: #f1f5f9;
         color: black;
         font-size: 1.5rem;
         // &__data{
