--- a/src/app/transactions/certification/dialog-cfop/dialog-cfop.component.html
+++ b/src/app/transactions/certification/dialog-cfop/dialog-cfop.component.html
@@ -1,5 +1,5 @@
  <div mat-dialog-title class="title">PARAMETRE DE LA DEMANDE</div> 
-
+<!--
 <form action="">
 
 <div mat-dialog-content class="container"> 
@@ -88,12 +88,39 @@
                 <mat-label>Adresse</mat-label>
                 <input type="number" matInput placeholder=" Ex: 000785" formControlName="firstCtrl" required>
               </mat-form-field>
-            </div>   
+            </div> 
+           </div> -->  
 
- </div> 
+ 
+   <div class="container">
+    <div class="row">
+      <div class="cl-xl-10">
+        <form action="" class="needs-validation" novalidate autocomplete="off">
+           <div class="row justify-content-center">
+            <div class="form-group col-md-6">
+              <label for="region">Département</label>
+              <select id="region" class="form-select form-select-sm">
+                <option *ngFor="let region of region" value="">{{region}}</option>
+              </select>
+            </div>
+              <div class="form-group col-md-6">
+                <label for="">Sous-préfecture</label>
+                <select class="form-select form-select-sm" data-live-search="true" default="FR" id="region">
+                  <option *ngFor="let region of region" value="">{{region}}</option>
+                </select>
+                 <label for="">Nom du groupement</label>
+                 <input type="text" name="" id="" class="form-control form-control-sm">
+              </div>
+           </div>
+        </form>
+      </div>
+    </div>
+   </div>
+
+
+
 <div class="btn" matDialogActions>
     <button mat-raised-button>Annuler</button>
     <button mat-raised-button routerLink="/certificatf" class="btn-color" >Confirmer</button>
 </div> 
                                                                                                        
-</form>
