--- a/src/app/transactions/certification/certification.component.html
+++ b/src/app/transactions/certification/certification.component.html
@@ -23,14 +23,14 @@
                 <!-- Checkbox Column -->
                 <ng-container matColumnDef="select">
                   <th mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox color="primary" (change)="$event ? toggleAllRows() : null"
+                    <mat-checkbox (change)="$event ? toggleAllRows() : null"  color="primary"
                                   [checked]="selection.hasValue() && isAllSelected()"
                                   [indeterminate]="selection.hasValue() && !isAllSelected()"
                                   [aria-label]="checkboxLabel()">
                     </mat-checkbox>
                   </th>
                   <td mat-cell *matCellDef="let row">
-                    <mat-checkbox (click)="$event.stopPropagation()"
+                    <mat-checkbox (click)="$event.stopPropagation()" color="primary"
                                   (change)="$event ? selection.toggle(row) : null"
                                   [checked]="selection.isSelected(row)"
                                   [aria-label]="checkboxLabel(row)">
