--- a/src/app/transactions/certification/certification.component.scss
+++ b/src/app/transactions/certification/certification.component.scss
@@ -23,3 +23,7 @@
   .mat-checkbox-indeterminate.mat-primary .mat-checkbox-background{
     background: rgb(248, 244, 39)!important;
   }
+
+  th td{
+    width: 100%;
+  }
