--- a/src/app/transactions/certification/certification.component.html
+++ b/src/app/transactions/certification/certification.component.html
@@ -66,6 +66,11 @@
                   <th mat-header-cell *matHeaderCellDef> village </th>
                   <td mat-cell *matCellDef="let element"> {{element.village}} </td>
                 </ng-container>
+
+                <ng-container matColumnDef="demandeur">
+                  <th mat-header-cell *matHeaderCellDef> demandeur </th>
+                  <td mat-cell *matCellDef="let element"> {{element.demandeur}} </td>
+                </ng-container>
               
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"
