--- a/src/app/transactions/certification/dialog-cfop/dialog-cfop.component.scss
+++ b/src/app/transactions/certification/dialog-cfop/dialog-cfop.component.scss
@@ -27,7 +27,11 @@
         flex: 1;
     }
 }*/
-
+.card-header{
+    background: rgb(232, 230, 230);
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+}
 
 .form-control,.form-select{
     height: 26px;
@@ -42,8 +46,28 @@
     display: inline-block;
     width: 20px;
 }
+ 
+.btn{
+    justify-content: center;
+    width: 100%;
+    height: 36px;
+    margin-bottom: -15px;
+}
 
-button{
-    width: 30%;
-    height: 32px;
+#submit{
+    background-color: #fb9101;
+    border: #fb9101;
+}
+
+#submit:hover{
+    background-color: #e48807c4;   
+}
+
+#retour{
+    background-color: #b7b6b6;
+    border: #b7b6b6;
+}
+
+#retour:hover{
+    background-color: #898585;   
 }
