--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -141,6 +141,7 @@
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
+    width: max-content;
   }
   
   .main-title {
@@ -216,9 +217,10 @@
   }
   
   .charts-card {
+    //margin-left: -15px;
     background-color: #ffffff;
-    width: 100%;
-    height: 100%;
+    width: 38vw;
+    height: 46vh;
     margin-bottom: 20px;
     padding: 25px;
     box-sizing: border-box;
@@ -239,19 +241,20 @@
   .chart-container{
     display: inline-block;
     position: relative;
-    width: 480px;
-    height: 300px;
+    width: 100%;
+   // height: %;
   }
   
   .chart-size{
     display: flex;
     position: relative;
-    width: 450px;
+    width: 100%;
+    height: 35vh;
     justify-content: center;
     object-fit: cover !important;
-
   }
 
+  
  
   
   /* ---------- SCROLLBARS ---------- */
@@ -331,7 +334,7 @@
     }
   
     .card, .charts-card {
-      width: 45%;
+      width: 100%;
       margin: 10px;
     }
   }
