--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,7 @@
         background: #f1f5f9;
         color: black;
         font-size: 1.5rem;
+        overflow-y: auto;
         // &__data{
         //     top: 50%;
         //     left: 50%;
